mini_map coeff fix

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -28,7 +28,12 @@ SUB_DIR=			$(addprefix $(DIR_OBJ)/,$(SUB_DIR_LST))
 
 INC_FILES	=		cub/main								\
 					cub/draw								\
-					utils/round								\
+					cub/main_utils							\
+					cub/free_functions						\
+					cub/keyhook_and_rotation				\
+					cub/map_display							\
+					cub/ray_and_wall_print					\
+					cub/ray_shooting_utils					\
 					parsing/check_id_utils					\
 					parsing/check_id						\
 					parsing/line_parsing_utils				\
